--- a/hello-html.html
+++ b/hello-html.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Hello World HTML</title>
+    <script src="javascript.js"></script>
   </head>
   <body>
     <h1>Hello World</h1>
